--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon src/server.ts",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "serve": "brew services start mongodb-community@8.0 && nodemon src/server.ts",
+    "dev": "brew services start mongodb-community@8.0 && ts-node-dev --respawn --transpile-only src/server.ts",
+    "stop": "brew services stop mongodb-community@8.0",
     "postinstall": "cp -n .env.example .env || true"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "favicon-fetch": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "uuid": "^11.1.0"
